tests/health/gold/sdk/tests__project_root_flag__test.toit.gold
tests/project_root_flag/test.toit:5:8: error: Package for prefix 'redirected' not found
import redirected.target as redirected
       ^~~~~~~~~~
tests/project_root_flag/test.toit:6:8: error: Package for prefix 'sub' not found
import sub
       ^~~
tests/project_root_flag/test.toit:7:8: error: Package for prefix 'foo' not found
import foo
       ^~~
tests/project_root_flag/test.toit:11:27: error: Unresolved identifier: 'identify'
  expect_equals "foo" foo.identify
                          ^~~~~~~~
tests/project_root_flag/test.toit:12:37: error: Unresolved identifier: 'identify'
  expect_equals "target" redirected.identify
                                    ^~~~~~~~
tests/project_root_flag/test.toit:13:27: error: Unresolved identifier: 'identify'
  expect_equals "sub" sub.identify
                          ^~~~~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
